--- a/index.html
+++ b/index.html
@@ -60,64 +60,66 @@
     </script>
     <script src=//cdn.bootcss.com/crypto-js/3.1.9/crypto-js.min.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/qs/dist/qs.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/qs/dist/qs.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/@jeecg/antd-onine/dist/OnlineForm.umd.min.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/@jeecg/antd-onine/dist/OnlineForm.umd.min.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/vue-photo-preview/dist/vue-photo-preview.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/@chenfengyuan/vue-qrcode/dist/vue-qrcode.min.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/viser-vue/umd/viser-vue.min.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/vue-photo-preview/dist/vue-photo-preview.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/ant-design-vue/lib/locale-provider/zh_CN.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/viser-vue/umd/viser-vue.min.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/ant-design-vue/dist/antd.min.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/ant-design-vue/lib/locale-provider/zh_CN.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/ant-design-vue/es/grid/Row.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/ant-design-vue/dist/antd.min.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/ant-design-vue/es/grid/Col.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/ant-design-vue/es/grid/Row.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/ant-design-vue/es/input/TextArea.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/ant-design-vue/es/grid/Col.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/mavon-editor/dist/mavon-editor.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/ant-design-vue/es/input/TextArea.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/lib/codemirror.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/mavon-editor/dist/mavon-editor.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/mode/javascript/javascript.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/lib/codemirror.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/mode/css/css.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/mode/javascript/javascript.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/mode/xml/xml.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/mode/css/css.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/mode/clike/clike.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/mode/xml/xml.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/mode/markdown/markdown.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/mode/clike/clike.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/mode/python/python.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/mode/markdown/markdown.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/mode/r/r.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/mode/python/python.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/mode/shell/shell.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/mode/r/r.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/mode/sql/sql.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/mode/shell/shell.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/mode/swift/swift.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/mode/sql/sql.js>
     </script>
-    <script src=//yunwisdoms.gitee.io/yunwisdomxr/cdn/view-design/dist/iview.min.js>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/mode/swift/swift.js>
+    </script>
+    <script src=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/view-design/dist/iview.min.js>
     </script>
     <script src=//cdn.bootcss.com/underscore.js/1.9.1/underscore-min.js>
     </script>
-    <link href=//lib.baomitu.com/element-ui/2.12.0/theme-chalk/index.css rel=stylesheet crossorigin=anonymous integrity=sha384-lORadheqlc4cbo9L5It1a5q/AS57s9lXvER3RpFU97WXyO3bZL+siYtgOjLigS3D>
     <link href=//cdn.jsdelivr.net/npm/ant-design-vue@1.4.10/dist/antd.min.css rel=stylesheet>
     <link href=//cdn.bootcss.com/nprogress/0.2.0/nprogress.min.css rel=stylesheet>
     <link href=//cdn.jsdelivr.net/npm/mavon-editor@2.7.6/dist/css/index.css>
     <link href=//cdn.bootcss.com/wangEditor/10.0.13/wangEditor.min.css rel=stylesheet>
-    <link href=//yunwisdoms.gitee.io/yunwisdomxr/cdn/vue-photo-preview/dist/skin.css rel=stylesheet>
-    <link href=//yunwisdoms.gitee.io/yunwisdomxr/cdn/view-design/dist/styles/iview.css rel=stylesheet>
-    <link href=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/lib/codemirror.css rel=stylesheet>
-    <link href=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/theme/panda-syntax.css rel=stylesheet>
-    <link href=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/addon/hint/show-hint.css rel=stylesheet>
-    <link href=//yunwisdoms.gitee.io/yunwisdomxr/cdn/codemirror/lib/codemirror.css rel=stylesheet>
-    <link href=//yunwisdoms.gitee.io/yunwisdomxr/cdn/mavon-editor/dist/css/index.css rel=stylesheet>
+    <link href=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/vue-photo-preview/dist/skin.css rel=stylesheet>
+    <link href=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/view-design/dist/styles/iview.css rel=stylesheet>
+    <link href=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/lib/codemirror.css rel=stylesheet>
+    <link href=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/theme/panda-syntax.css rel=stylesheet>
+    <link href=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/addon/hint/show-hint.css rel=stylesheet>
+    <link href=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/codemirror/lib/codemirror.css rel=stylesheet>
+    <link href=//cdn.jsdelivr.net/gh/Miazzy/yunwisdoms@v1.0.0/cdn/mavon-editor/dist/css/index.css rel=stylesheet>
+    <link href=//lib.baomitu.com/element-ui/2.12.0/theme-chalk/index.css rel=stylesheet crossorigin=anonymous integrity=sha384-lORadheqlc4cbo9L5It1a5q/AS57s9lXvER3RpFU97WXyO3bZL+siYtgOjLigS3D>
     <script>
         //定义配置文件对象
         window._CONFIG = {};
